lab1/Test/L1-A-7-97.output
Error Type A at Line 13
Error Type A at Line 16
Error Type A at Line 20
Error Type A at Line 41
